src/test/ui/derives/derives-span-Ord-enum.stderr
error[E0277]: the trait bound `Error: Ord` is not satisfied
  --> $DIR/derives-span-Ord-enum.rs:9:6
   |
LL | #[derive(Ord,Eq,PartialOrd,PartialEq)]
   |          --- in this derive macro expansion
...
LL |      Error
   |      ^^^^^ the trait `Ord` is not implemented for `Error`
   |
   = note: this error originates in the derive macro `Ord` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
